maybe fixed settings/name too wide on phone

--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -42,7 +42,7 @@ body {
 }
 .nameinput {
   display: flex;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
 }
 .namebutton {
   display: flex;
